isaac_server_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  creationTimestamp: null
  labels:
    app: isaac-server
  name: isaac-server
  annotations:
    ccs.ornl.gov/fs: olcf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: isaac-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
    revisionHistoryLimit: 10
    progressDeadlineSeconds: 600
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: isaac-server
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
        - resources:
            limits:
               cpu: '6'
               memory: 12Gi
            requests:
               cpu: '6'
               memory: 12Gi
          stdin: true  
          image: image-registry.openshift-image-registry.svc:5000/csc434/dockerisaac
          name: dockerisaac
          ports:
            - name: simulation-port
              containerPort: 2460
              protocol: TCP
            - name: webserver-port
              containerPort: 8080
              protocol: TCP
            - name: websockets-port
              containerPort: 2459
              protocol: TCP
          args: 
status: {}
