isaac_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isaac-server
spec:
  selector:
    name: isaac-server
  ports:
  - name: simulation-port
    port: 2460
    protocol: TCP
    targetPort: 2460 
  - name: webserver-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: websockets-port
    port: 2459
    protocol: TCP 
    targetPort: 2459
