isaac_server_sim_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isaac-server-sim
  labels:
    app: isaac-server
spec:
  selector:
    name: isaac-server
  ports:
  - name: sim-port-service
    port: 2460
    protocol: TCP
    targetPort: simulation-port
  type: NodePort
