isaac_server_summit_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: isaac-service
  name: isaac-service
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: nginx-hello-world
  sessionAffinity: None
  type: ClusterIP
