isaac_server_webserver_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isaac-server-webserver
  labels:
    app: isaac-server
spec:
  selector:
    app: isaac-server
  ports:
  - name: webserver-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: websockets-port
    port: 2459
    protocol: TCP 
    targetPort: 2459
